Adds support for ```FormatOptions``` class for controlling outputting
Writing JSON objects to strings now accept a FormatOptions parameter
  which allows more control beyond just verbose and indent, on how
  the json is output.

Adds support for same line outputting for empty objects and arrays
Adds support for optionally escaping / characters

Also address a bunch of old-style java issues, starting to add more typed
 classes
Cleans up some SonarLint recommended fixes